--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "test": "mocha"
   },
   "dependencies": {
-    "commander": "8.0.0",
+    "commander": "^9.4.0",
     "fast-json-parse": "1.0.3",
     "split2": "3.2.2"
   },
